# parcels_migration

./: .gitignore  README.md
v2.4.2/: README.md  hello.py  pyproject.toml
v2.4.2/notebooks/: tutorial_Argofloats.ipynb  tutorial_analyticaladvection.ipynb  tutorial_nemo_3D.ipynb  tutorial_sampling.ipynb
v2.4.2/scripts/: example_analyticaladvection.py  example_argofloats.py  example_diffusion.py  example_sampling.py  tutorial_analyticaladvection.py  tutorial_argofloats.py  tutorial_diffusion.py  tutorial_nemo_3D.py  tutorial_sampling.py
v3.1.0/: README.md  pyproject.toml
v3.1.0/scripts/: example_analyticaladvection.py  example_argofloats.py  example_diffusion.py  example_sampling.py  tutorial_analyticaladvection.py  tutorial_argofloats.py  tutorial_nemo_3D.py  tutorial_sampling.py
v3.1.0/tests/: pytest.ini  run_tests.sh  test_analyticaladvection.py  test_argofloats.py  test_diffusion.py  test_sampling.py
